--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
 
     <!-- Theme output -->
-    <title>Qefood - Community Recipes Sharing HTML Template</title>
+    <title>ePatos – Marketplace</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
