--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="main-header">
 
             <!-- Logo -->  
-            <a href="index.html"><img class="logo" src="images/logo.png" alt="Qefood" /></a>
+            <a href="index.html"><img class="logo" src="images/logo.png" alt="ePatos" title="ePatos" /></a>
  
             <!-- Navigation Menu -->
             <nav>
